<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width ="match_parent"
    android:layout_height ="match_parent"
    >

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:singleLine="true"
        android:inputType="text"/>

    <ListPreference
        android:title="@string/pref_temperature_units_label"
        android:key="@string/pref_temperature_units_key"
        android:defaultValue="@string/pref_temperature_units_default"
        android:dialogTitle="@string/pref_temperature_units_label"
        android:entries="@array/tempListArray"
        android:entryValues="@array/tempListValues"
        android:singleLine="false"
        />

</PreferenceScreen>